# crazytrip_server_users

./: .env.example  .env.production.example  .gitignore  Cargo.toml  Dockerfile  README.md  cobertura.xml  security.md
migrations/: V0001__create_initial_schema.sql  V0001__create_schema.sql  V0002__add_gamification_schema.sql
src/: lib.rs  main.rs
src/auth/: mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/examples_bin/: check_sessions.rs  create_db.rs
src/handlers/: health_test.rs  mod.rs
src/middleware/: mod.rs
src/models/: mod.rs
src/services/: mod.rs
src/utils/: mod.rs
tests/: auth_test.rs  handlers_full_test.rs  integration_test.rs  refresh_replay.rs  security_lockout_test.rs
