[package]
name = "crazytrip-user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"
actix-rt = "2.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Load .env files into environment at startup
dotenvy = "0.15"
futures-util = "0.3"

# Logging
env_logger = "0.10"
log = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Password hashing
bcrypt = "0.15"

# JWT tokens
jsonwebtoken = "9.0"

# Database
deadpool-postgres = "0.12"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }

# Hashing
sha2 = "0.10"

# Random number generation
rand = "0.8"

# HTTP client (for future use)
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
actix-web = { version = "4.4", features = ["macros"] }
