[package]
name = "crazytrip-user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7.1"
actix-rt = "2.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Load .env files into environment at startup
dotenvy = "0.15"
futures-util = "0.3"

# Logging
env_logger = "0.11.8"
log = "0.4"
flexi_logger = "0.31.7"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Password hashing
bcrypt = "0.17.1"

# JWT tokens (v10 requires explicit crypto backend)
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }

# Database
deadpool-postgres = "0.14.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }

# Hashing
sha2 = "0.10"

# Random number generation
rand = "0.9.2"

# Cryptographic randomness helper used in utils.generate_random_string
getrandom = "0.2"

# HTTP client (removed - not used currently)
# reqwest = { version = "0.11", features = ["json"] }

# Keep dependencies up-to-date: bump small versions where safe

[dev-dependencies]
actix-web = { version = "4.4", features = ["macros"] }
